small ui change pre-wrap issue:#26723

--- a/apps/uikit-playground/src/_global.css
+++ b/apps/uikit-playground/src/_global.css
@@ -56,11 +56,11 @@
 } */
 
 .rcx-modal:has(.uiKitWrapper){
-    padding: 0px !important
+    padding: 0px !important;
 }
 
 .rcx-modal__content:has(.uiKitWrapper){
-    overflow: visible !important
+    overflow: visible !important;
 }
 
 div.rcx-message-system__body{
